WIP: getting the vignette code to run

--- a/vignettes/fireSense-tutorial.Rmd
+++ b/vignettes/fireSense-tutorial.Rmd
@@ -104,15 +104,20 @@ knitr::opts_chunk$set(
 )
 
 library(reproducible)
-Require(c("magrittr", "dplyr", "pemisc", "PtProcess", "quickPlot",
+Require(c("magrittr", "data.table", "dplyr", "pemisc", "PtProcess", "quickPlot",
           "raster", "rgeos", "sp", "SpaDES.core", "SpaDES.tools", "spatstat"))
 
 options(reproducible.useCache = FALSE) # Turn off caching
 
-#setPaths(
-#  modulePath = normalizePath("../NWT/modules"), ## TODO: fix paths
-#  outputPath = normalizePath("../NWT/outputs")
-#)
+moduleDir <- checkPath(file.path(tempdir(), "modules"), create = TRUE)
+outputDir <- checkPath(file.path(tempdir(), "outputs"), create = TRUE)
+
+setPaths(
+  modulePath = moduleDir,
+  outputPath = outputDir
+)
+
+## TODO: download modules to moduleDir -- use git or downloadModule() ???
 
 normalizeRaster <- function(x) { ## TODO: use pemisc version
   # Normalize raster values
@@ -208,16 +213,16 @@ fireLocations <- as(fireLocations, "SpatialPoints")
 #  summarise(n_fires = n()) %>%
 #  right_join(landcoverDataLowRes) %>%
 #  left_join(weatherDataLowRes) %>%
-  mutate(n_fires = ifelse(is.na(n_fires), 0, n_fires))
+#  mutate(n_fires = ifelse(is.na(n_fires), 0, n_fires))
 
 # Converting the above from tibble to data.table 
 dataFireSense_IgnitionFit <- data.table(
   extract(landTypeOneLowRes, fireLocations, cellnumbers = TRUE),
   landtype_2_pp = extract(landTypeTwoLowRes, fireLocations, cellnumbers = FALSE),
   weather = extract(weatherLowRes, fireLocations, cellnumbers = FALSE)
-  )
-setnames(dataFireSense, old = "layer", new = "landtype_1_pp")
-dataFireSense_IgnitionFit <- dataFireSense[, list(
+)
+setnames(dataFireSense_IgnitionFit, old = "layer", new = "landtype_1_pp")
+dataFireSense_IgnitionFit <- dataFireSense_IgnitionFit[, list(
   n_fires = .N, landtype_1_pp = landtype_1_pp[1], 
   landtype_2_pp = landtype_2_pp[1], weather = weather[1]
 ), by = cells]
@@ -226,7 +231,7 @@ dataFireSense_EscapeFit <- data.table(
   landtype_1_pp = extract(landTypeOne, fireLocations, cellnumbers = FALSE),
   landtype_2_pp = extract(landTypeTwo, fireLocations, cellnumbers = FALSE),
   weather = extract(weather, fireLocations, cellnumbers = FALSE)
-  )
+)
 
 # Create the dataset necessary to fit the statistical model fire escapes
 #dataFireSense_EscapeFit <- tibble(
@@ -423,7 +428,6 @@ fireSense_SizeFitted <- sim$fireSense_SizeFitted # Extract the fitted model from
 ### Produce the maps of the tapered Pareto parameters
 
 ```{r produce_maps_tp_params, message=FALSE}
-
 modules <- list("fireSense_SizePredict")
 
 times <- list(start = 1, end = 1)
@@ -539,7 +543,6 @@ fireSense_SpreadFitted <- sim$fireSense_SpreadFitted # Extract the fitted model 
 ### Fire ignition rates
 
 ```{r predict_ignition_rates, message=FALSE}
-
 modules <- list("fireSense_IgnitionPredict")
 
 times <- list(start = 1, end = 1)
@@ -746,7 +749,7 @@ burnMap <- sim$burnMap
 Plot(burnMap)
 ```
 
-Note that all the steps above could be done in one simulation / SpaDES call()
+Note that all the steps above could be done in one simulation / SpaDES call.
 
 # Additional resources
 
