trying to fix vignette failures

--- a/vignettes/Firesense_LCC_flammability.Rmd
+++ b/vignettes/Firesense_LCC_flammability.Rmd
@@ -12,14 +12,20 @@ editor_options:
 ---
 
 ```{r setup, include=FALSE}
+library(knitr)
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  echo = TRUE,
+  eval = TRUE
+)
+
 library(data.table)
 library(fasterize)
 library(ggplot2)
 library(raster)
 library(reproducible)
 library(sf)
-
-knitr::opts_chunk$set(echo = TRUE, eval = TRUE)
 ```
 
 ## R Markdown
