--- a/vignettes/fireSense-tutorial.Rmd
+++ b/vignettes/fireSense-tutorial.Rmd
@@ -108,7 +108,7 @@ knitr::opts_chunk$set(
 ```{r init}
 library(Require)
 Require(c("magrittr", "data.table", "dplyr", "pemisc", "PtProcess", "quickPlot",
-          "raster", "rgeos", "sp", "SpaDES.core", "SpaDES.tools", "spatstat"))
+          "raster", "sf", "sp", "SpaDES.core", "SpaDES.tools", "spatstat"))
 
 options(reproducible.useCache = FALSE) # Turn off caching
 
