remove magrittr dependency
`%>%` re-exported by `sf` (among others) so use it from there

--- a/vignettes/fireSense-tutorial.Rmd
+++ b/vignettes/fireSense-tutorial.Rmd
@@ -107,7 +107,7 @@ knitr::opts_chunk$set(
 
 ```{r init}
 library(Require)
-Require(c("magrittr", "data.table", "dplyr", "pemisc", "PtProcess", "quickPlot",
+Require(c("data.table", "dplyr", "pemisc", "PtProcess", "quickPlot",
           "raster", "sf", "sp", "SpaDES.core", "SpaDES.tools", "spatstat"))
 
 options(reproducible.useCache = FALSE) # Turn off caching
